kubernetes/apps/base/victoria-metrics/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: victoria-metrics
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
